<resources>
    <string name="app_name">Template Application</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="MSGPleaseWait">Vui lòng chờ</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_activty_slash_screen">welcome</string>
    <string name="TaiKhoan">Tài khoản</string>
    <string name="MatKhau">Mật khẩu</string>
    <string name="Khac">KHÁC</string>
    <string name="DangNhap">Đăng nhập</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="DangKy">Đăng Ký</string>
    <string name="NhapEmail">Nhập Email</string>
    <string name="SDT">Số điện thoại</string>
</resources>
